--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@monaco-editor/react": "^4.6.0",
     "@splinetool/react-spline": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
